-improved HTML display of Pids -service description console print fixed for MPTS (shows only TS local SDs) -service descriptions saved in List<> for printing -console printout fixed up to prevent jumping as SDs change -service type description added to console print

--- a/embeddedWebResources/stylesheets/index.css
+++ b/embeddedWebResources/stylesheets/index.css
@@ -24,12 +24,12 @@ body {
 }
 
 #currentMetrics1 > tbody > tr > td, #currentMetrics2 > tbody > tr > td{
-    padding-left : 32px;
+    padding-left : 48px;
 }
 
-#currentMetrics2 > tbody > tr.blockStart:nth-child(1n+1) > td{
-    padding-top : 16px;
-}
+/*#currentMetrics2 > tbody > tr.blockStart:nth-child(1n+1) > td{
+    padding-left : 32px;
+}*/
 
 #mainHeaderProductName { font-size: 24px; }
 
@@ -44,7 +44,7 @@ body {
     .groupBox {
         border: solid 1px rgb(170, 170, 170);
         margin: 0 0 0 0;
-        padding: 0px;
+        padding: 0;
         z-index: 3;
         width: 410px;
     }
